syntax = "proto3";

package task.v1;

option go_package = "github.com/rudraprasaaad/task-scheduler/internal/grpc/generated/task";

import "google/protobuf/timestamp.proto";

message Task{
	string id = 1;
	string name = 2;
	string type = 3;
	string payload_json = 4;
	int32 priority = 5;
	string status = 6;
	int32 retries = 7;
	int32 max_retries = 8;
	google.protobuf.Timestamp created_at = 9;
	google.protobuf.Timestamp updated_at = 10;
	google.protobuf.Timestamp scheduled_at = 11;
	google.protobuf.Timestamp started_at = 12;
	google.protobuf.Timestamp completed_at = 13;
	string error = 14;
	string worker_id = 15;
}

message GetTaskRequest{
	string worker_id = 1;
	int32 limit = 2;
}

message GetTaskResponse{
	repeated Task tasks = 1;
}

message UpdateTaskRequest{
	Task task = 1;
}

message UpdateTaskResponse{
	bool success = 1;
	string message = 2;
}

service TaskService {
	rpc GetAvailableTask(GetTaskRequest) returns (GetTaskResponse);

	rpc UpdateTask(UpdateTaskRequest) returns (UpdateTaskResponse);

	rpc StreamTasks(GetTaskRequest) returns (stream Task);
}